--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
+    background-color: #ffb9fe;
     margin: 0;
     padding: 0;
+    border: 10px solid red;
 }
 nav a.active {
     font-weight: bold;
     color: #ff6347;
 }
+.titleCard {
+    font-family: 'Cedarville Cursive', sans-serif, cursive;
+    font-size: 2.5rem;
+    color: #51755e;
+}
+  
